# tray-icon

./: H.NotifyIcon.Apps.Console.csproj  H.NotifyIcon.Apps.Console.sln  README.md
H.NotifyIcon.Apps.Console/: Program.cs  README.md
Windows.Forms/: TrayIcon.cs  TrayIcon.csproj  Windows.Forms.sln
pystrayicon/: README.md  pyproject.toml
pystrayicon/src/TrayIcon/: tray.py
